<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_toolbar">

    <include
        android:id="@+id/toolbarPrivasi"
        layout="@layout/toolbar_privasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPrivasi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPrivasi"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_privasi"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/privasiMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privasiMain"
                android:textColor="@color/colorMain"
                android:textSize="15sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/titlePrivasi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mengumpulkan Informasi Perangkat"
                android:textStyle="bold"
                android:textColor="@color/colorMain"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/privasi1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privasiChild1"
                android:textColor="@color/colorMain"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/titlePrivasi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mengumpulkan Alamat Gmail"
                android:textStyle="bold"
                android:textColor="@color/colorMain"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/privasi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privasiChild2"
                android:textColor="@color/colorMain"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/titlePrivasi3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Memerlukan Informasi Lokasi"
                android:textStyle="bold"
                android:textColor="@color/colorMain"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/privasi3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privasiChild3"
                android:textColor="@color/colorMain"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/titlePrivasi4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Memerlukan Akses Penyimpanan"
                android:textStyle="bold"
                android:textColor="@color/colorMain"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/privasi4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privasiChild4"
                android:textColor="@color/colorMain"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/titlePrivasi5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Informasi Keamanan"
                android:textStyle="bold"
                android:textColor="@color/colorMain"
                android:layout_marginTop="10dp"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/privasi5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privasiChild5"
                android:textColor="@color/colorMain"
                android:textSize="15sp"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>